@@ -1,3 +1,7 @@
+Thu Jul  8 19:12:14 CEST 2004 (tk)
+----------------------------------
+  * libclamav: read .db3 files from cvd
+
 Thu Jul  8 15:39:29 CEST 2004 (tk)
 ----------------------------------
   * libclamav: extend engine to support character alternatives (a|b|..|z)
